[build-system]
requires = ["setuptools>=69.2.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "l2m2"
authors = [{ name = "Pierce Kelaita", email = "pierce@kelaita.com" }]
description = "A very simple LLM manager for Python."

urls.Homepage = "https://github.com/pkelaita/l2m2"
urls.Documentation = "https://github.com/pkelaita/l2m2/blob/main/README.md"
urls.Repository = "https://github.com/pkelaita/l2m2.git"
urls.Issues = "https://github.com/pkelaita/l2m2/issues"

readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dynamic = ["dependencies", "version"]


[tool.setuptools]
dynamic.dependencies = { file = ["requirements.txt"] }
dynamic.version = { attr = "l2m2.__version__" }
packages.find.exclude = ["tests*", "test_utils*"]
packages.find.namespaces = false


[tool.mypy]
exclude = ["build", "dist", "venv", "integration_tests", "scripts", "tests"]

ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true

# disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_any_generics = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true

python_version = "3.12"
